--- a/ProyectoEPS/ProyectoEPS/ProyectoEPS.csproj
+++ b/ProyectoEPS/ProyectoEPS/ProyectoEPS.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Afiliado.cs" />
     <Compile Include="Models\AtencionCliente.cs" />
     <Compile Include="Models\Cita.cs" />
     <Compile Include="Models\Conexion.cs" />
